<?xml version="1.0" encoding="utf-8"?>
<merge  xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/recorder_info_view_background">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">


            <TextView
                android:id="@+id/trackNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_leftright_text_margin"
                android:layout_marginTop="@dimen/main_top_text_margin"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:text="@string/example_record_name"
                android:textColor="@color/black"
                android:textSize="@dimen/record_title_size" />

            <TextView
                android:id="@+id/trackDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_leftright_text_margin"
                android:layout_marginBottom="@dimen/main_bottom_text_margin"
                android:text="@string/example_record_date"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/record_date_size" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/micButtton"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/play_button_diametr"
                android:layout_height="@dimen/play_button_diametr"
                android:layout_marginRight="@dimen/recordinfo_left_button_margin"
                android:backgroundTint="@color/blue"
                app:cornerRadius="@dimen/play_button_radius"
                app:icon="@drawable/baseline_play_arrow_24"
                app:iconGravity="textStart"
                app:iconPadding="1dp"
                app:iconSize="@dimen/play_button_icon_size"
                app:iconTint="@color/white"
                app:iconTintMode="multiply"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_play_arrow_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/playingTrackTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_record_played_time"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/record_time_size"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/timeSlashTextView"
                tools:layout_editor_absoluteY="24dp" />

            <TextView
                android:id="@+id/timeSlashTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slash_char"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/record_time_size"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fullTrackTimeTextView"
                tools:layout_editor_absoluteY="24dp" />

            <TextView
                android:id="@+id/fullTrackTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/main_leftright_text_margin"
                android:text="@string/example_record_full_time"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/record_time_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/micButtton"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</merge>